# NMEAParser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.am  README.md  README.org  bootstrap  configure.ac  gps-data.txt  nmea-parser.hpp  test.cpp
cmake/: FindCheck.cmake
lib/: CMakeLists.txt  GPGGA.cpp  GPGLL.cpp  GPRMC.cpp  Makefile.am  NMEA.cpp  NMEA.h  NMEAData.cpp  NMEAHeader.cpp  NMEAMessage.cpp  NMEAParser.cpp  NMEAParser.h
test/: CMakeLists.txt  DTMMessageParse_Test.cpp  GBSMessageParse_Test.cpp  GGAMessageParse_Test.cpp  GLLMessageParse_Test.cpp  GSAMessageParse_Test.cpp  GSTMessageParse_Test.cpp  GSVMessageParse_Test.cpp  Makefile.am  ParseAltitude_Test.cpp  ParseAngle_Test.cpp  ParseCOGM_Test.cpp  ParseCOGT_Test.cpp  ParseDifferentialCorrectionAge_Test.cpp  ParseDifferentialStationID_Test.cpp  ParseFixStatus_Test.cpp  ParseFloat_Test.cpp  ParseGeoidSeparation_Test.cpp  ParseHDOP_Test.cpp  ParseInteger_Test.cpp  ParseLLL_Test.cpp  ParseLLL_Test.cpp~  ParseLSD_Test.cpp  ParseLatitude_Test.cpp  ParseLongitude_Test.cpp  ParseMSL_Test.cpp  ParseMagneticVariation_Test.cpp  ParseMessageType_Test.cpp  ParseModeIndicator_Test.cpp  ParseNavMode_Test.cpp  ParsePDOP_Test.cpp  ParseRRR_Test.cpp  ParseResiduals_Test.cpp  ParseSOG_Test.cpp  ParseSV_Test.cpp  ParseSatiliteFixes_Test.cpp  ParseSmode_Test.cpp  ParseSpeed_Test.cpp  ParseStatus_Test.cpp  ParseTalkerID_Test.cpp  (+16 more)
